--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evobot",
+  "name": "Logic",
   "version": "0.9.0",
   "description": "Discord music bot built with discord.js",
   "main": "index.js",
